# dp-pleomorphy-analysis

./: .gitignore  README.md  main.py  prepare-yolo-annotations-viz.ipynb  prepare-yolo-annotations.ipynb  pyproject.toml  slide-2024-04-03T07-52-35-R1-S2.txt  visualize-rough-annotations.ipynb  wsi.py
notebooks/segmentation/: pleomorphy-region-extract.ipynb
notebooks/visualization/: visualize-rough-annotations.ipynb
notebooks/yolo/: prepare-yolo-annotations-viz.ipynb  prepare-yolo-annotations.ipynb  raw-predict.ipynb  remap-classes.ipynb
outputs/: remapped_slide-2024-04-03T07-52-35-R1-S2-rough.geojson  remapped_slide-2024-04-03T07-52-35-R1-S2.geojson
outputs/segmentation/: outpath.ome.tif
outputs/segmentation/inference-inputs/: remapped_slide-2024-04-03T07-52-35-R1-S2-rough.ome.tif  remapped_slide-2024-04-03T07-52-35-R1-S2-rough.ome_instanseg_prediction.geojson  remapped_slide-2024-04-03T07-52-35-R1-S2-rough.ome_instanseg_prediction.tiff  remapped_slide-2024-04-03T07-52-35-R1-S2-rough.ome_instanseg_prediction_overlay.tiff
src/: main.py
src/yolo/: convert_annotations.py  main.py  prepare_yolo_finetuning.py
src/yolo/utils/: save_as.py
